--- a/css/styles.css
+++ b/css/styles.css
@@ -1,173 +1,181 @@
-
 :root {
-    --primary-text-color: #434455;
-    --title-text-color: #2E2F42;
-    --title-wite-color: #FFFFFF;
-    --title-blue-color: #4D5AE5;
-    --bacground-color-heroo-footer: #2E2F42;
-    --button-hover-color: #404BBF;
-    --link-hover-color: #404BBF;
-    --button-title-color: #4D5AE5;
-    --footer-logo-white: #F4F4FD;
-    --text-item-color: #E7E9FC;
-    --filtr-button-bacgr-color-white: #F4F4FD;
-    --filtr-button-hover-white: #FFFFFF;
+  --primary-text-color: #434455;
+  --title-text-color: #2e2f42;
+  --title-wite-color: #ffffff;
+  --title-blue-color: #4d5ae5;
+  --bacground-color-heroo-footer: #2e2f42;
+  --button-hover-color: #404bbf;
+  --link-hover-color: #404bbf;
+  --button-title-color: #4d5ae5;
+  --footer-logo-white: #f4f4fd;
+  --text-item-color: #e7e9fc;
+  --filtr-button-bacgr-color-white: #f4f4fd;
+  --filtr-button-hover-white: #ffffff;
 }
 
 body {
-background-color: var(--title-wite-color);
-color:  var(--primary-text-color);
+  background-color: var(--title-wite-color);
+  color: var(--primary-text-color);
 
-font-family: Roboto, sans-serif;
-letter-spacing: 0.02em;
+  font-family: Roboto, sans-serif;
+  letter-spacing: 0.02em;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+.container{
+    width: 1158;
+    margin: 0;
 }
 .logo {
-   
-font-family: Raleway, sans-serif;
-text-decoration: none;
-font-weight: 800;
-font-size: 18px;
-line-height: 1.3;
+  font-family: Raleway, sans-serif;
+  text-decoration: none;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.3;
 
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: var(--title-text-color);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--title-text-color);
 }
 .logo-item {
-color: var(--title-blue-color);
+  color: var(--title-blue-color);
 }
 .list {
-list-style: none;
+  list-style: none;
 }
 
 .link-item {
-text-decoration: none;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5; 
-color: var(--title-text-color);
-
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--title-text-color);
 }
 .link-item:active {
-color: var(--title-blue-color);
+  color: var(--title-blue-color);
 }
 .link-item:hover,
 .link-item:focus {
-    color: var(--link-hover-color);
- }
+  color: var(--link-hover-color);
+}
 
 .link {
-color: var(--primary-text-color);
-text-decoration: none;
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
+  color: var(--primary-text-color);
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
 }
 .link:active {
-color: var(--title-blue-color);
+  color: var(--title-blue-color);
 }
 .link:hover,
 .link:focus {
- color: var(--title-blue-color);   
+  color: var(--title-blue-color);
 }
 .hero {
-background-color: var(--bacground-color-heroo-footer);
+  background-color: var(--bacground-color-heroo-footer);
 }
 .hero-title {
-color: var(--title-wite-color);
-font-weight: 700;
-font-size: 56px;
-line-height: 1.07;
-text-align: center;
-
+  color: var(--title-wite-color);
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
 }
 .hero-button {
-font-family: Roboto, sans-serif;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.04em;
-background-color: var(--button-title-color);
-color: var(--title-wite-color);
-cursor: pointer;
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  background-color: var(--button-title-color);
+  color: var(--title-wite-color);
+  cursor: pointer;
 }
-.hero-button:hover, .hero-button:focus {
-background-color:var(--button-hover-color);
+.hero-button:hover,
+.hero-button:focus {
+  background-color: var(--button-hover-color);
 }
 .section-title {
-font-weight: 700;
-font-size: 36px;
-line-height: 1.1px;
-color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.1px;
+  color: var(--title-text-color);
 
-
-text-transform: capitalize;
+  text-transform: capitalize;
 }
 .section-title.item {
-color: var(--title-text-color); 
-font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
 }
-
 
 .text {
-    font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
 }
 .footer {
-    background-color:var(--bacground-color-heroo-footer);
+  background-color: var(--bacground-color-heroo-footer);
 }
 .footer-logo {
-text-decoration: none;
-font-family: Raleway, sans-serif;
-font-weight: 800;
-font-size: 18px;
-line-height: 1.2;
+  text-decoration: none;
+  font-family: Raleway, sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.2;
 
-
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: var(--footer-logo-white);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--footer-logo-white);
 }
 .text-item {
-    color: var(--text-item-color);
+  color: var(--text-item-color);
 
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
 }
 /* -------------------------portfolio --------------------*/
 .filter-button {
-font-family: 'Roboto', sans-serif;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.04em;
-color:var(--button-title-color);
-background-color: var(--filtr-button-bacgr-color-white);
-cursor: pointer;
-
-
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--button-title-color);
+  background-color: var(--filtr-button-bacgr-color-white);
+  cursor: pointer;
 }
 
 .filter-button:hover,
 .filter-button:focus {
-color: var(--filtr-button-hover-white);
-background-color:var(--button-hover-color);
+  color: var(--filtr-button-hover-white);
+  background-color: var(--button-hover-color);
 }
 
 .section-subtitle {
-color: var(--title-text-color);
-font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
-
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
 }
 .section-text {
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
 }
