--- a/css/styles.css
+++ b/css/styles.css
@@ -160,8 +160,9 @@ img {
   color: var(--title-wite-color);
   cursor: pointer;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border: 1px solid var(--button-title-color);
+  border: transparent;
   border-radius: 4px;
+  padding: 16px 32px;
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -240,6 +241,10 @@ img {
   line-height: 1.5;
 }
 .footer {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  padding-right: 156px;
+  padding-right: 1200px;
   background-color: var(--bacground-color-heroo-footer);
 }
 .footer-logo {
