--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ img {
   padding-left: 15px;
   padding-right: 15px;
 
-  outline: 3px solid tomato;
+
 }
 .logo {
   display: block;
@@ -128,7 +128,7 @@ img {
 .section {
   padding-top: 120px;
   padding-bottom: 120px;
-  outline: 3px solid teal;
+
 }
 .section.exemple {
   padding-top: 0;
@@ -181,7 +181,7 @@ img {
   text-align: center;
   text-transform: capitalize;
   margin-bottom: 72px;
-  outline: 2px solid tomato;
+ 
 }
 .section-subtitle {
   font-weight: 500;
@@ -222,6 +222,9 @@ img {
   gap: 24px;
 }
 /* our taem */
+.section.oue-team{
+  background: #F4F4FD;
+}
 .team-title {
   margin-bottom: 72px;
 }
@@ -243,11 +246,14 @@ img {
 .footer {
   padding-top: 100px;
   padding-bottom: 100px;
-  padding-right: 156px;
-  padding-right: 1200px;
   background-color: var(--bacground-color-heroo-footer);
 }
+footer > .container {
+  padding-right: 864px;
+}
 .footer-logo {
+  display: block;
+  margin-bottom: 16px;
   text-decoration: none;
   font-family: Raleway, sans-serif;
   font-weight: 800;
@@ -266,6 +272,12 @@ img {
   line-height: 1.5;
 }
 /* -------------------------portfolio --------------------*/
+.filter.list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-bottom: 75px;
+}
 .filter-button {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
@@ -273,6 +285,9 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: var(--button-title-color);
+  border: none;
+  border-radius: 4px;
+  padding: 12px 24px;
   background-color: var(--filtr-button-bacgr-color-white);
   cursor: pointer;
 }
@@ -287,4 +302,21 @@ img {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
+}
+.portfolio {
+  padding-top: 93px;
+}
+.portfolio-exemple {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px 24px;
+}
+.portfolio-item{
+  border-bottom: 1px solid #E7E9FC;
+}
+.exemple-item{
+  padding: 32px 0px;
+}
+.portfolio-exemple.section-subtitle {
+  margin-bottom: 8px;
 }
